--- a/static/forms.css
+++ b/static/forms.css
@@ -11,13 +11,13 @@
 	box-sizing: border-box;
 	display: block;
 	font-size: 14px;
-	font-family: Roboto, sans-serif;
+	font-family: Arial, sans-serif;
 	color: #0a0a0a;
 }
 input.button{
 	font-size: 20px;
 	font-weight: bold;
-	font-family: Roboto, sans-serif;
+	font-family: Arial, sans-serif;
 	color: #fff8dc;
 	display: block;
 	background: #006400;
@@ -29,4 +29,18 @@ input.button{
 	border: none;
 	border-radius: 30px;
 	margin: 0 auto;
+}
+select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+	width: 470px;
+	height: 55px;
+	margin-bottom: 30px;
+	font-family: Arial, sans-serif;
+	color: #0a0a0a;
+	font-size: 14px;
+	padding: 13px 0 13px 23px;
+	text-align: center;
+	background-color: #ffffff;
 }
