--- a/templates/department.html
+++ b/templates/department.html
@@ -1,54 +1,16 @@
-<!DOCTYPE html>
-<html lang = "en">
-<head>
+{% extends "base.html" %}
+{% block title %}
    {% if deps %}
-       <title>Edit department</title>
+       Edit department
    {% else %}
-       <title>Add department</title>
+       Add department
    {% endif %}
-   <meta charset="UTF-8">
-   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='main.css') }}">
-   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='forms.css') }}">
-</head>
-   <body>
-      <header>
-         <div class="container">
-            <ul class="nav">
-                <li>
-                  <a href = "{{ url_for('view_employees.index') }}">Main Page</a>
-               </li>
-               <li>
-                  <a href = "{{ url_for('view_employees.show_all_emp') }}">Employees</a>
-               </li>
-               <li>
-                  <a href = "{{ url_for('crud_emp.new_emp') }}">Add Employee</a>
-               </li>
-               <li>
-                  <a href = "{{ url_for('view_departments.show_all_dep') }}">Departments</a>
-               </li>
-               <li>
-                  <a href = "{{ url_for('crud_dep.new_dep') }}">Add Department</a>
-               <li>
-               </ul>
-            </div>
-         </header>
-         <hr/>
-         <section class="main">
-         <div class="container">
-            <div class="main_part">
-            {%- for category, message in get_flashed_messages(with_categories = true) %}
-            <div class = "alert">
-               {{ message }}
-            </div>
-            {%- endfor %}
-            <div class="add">
-               <form method = "post" {% if deps %} action="{{ url_for('crud_dep.edit_dep', _id=deps.id) }} {% endif %}">
-                        <input type = "text" name = "name" {% if deps %} value="{{ deps.name }}" {% endif %} placeholder = "Name" /><br>
-                        <input class="button"  type = "submit" value = "Submit" />
-               </form>
-            </div>
-            </div>
-      </div>
-      </section>
-   </body>
-</html>
+{% endblock %}
+{% block add %}
+   <div class="add">
+      <form method = "post" {% if deps %} action="{{ url_for('crud_dep.edit_dep', _id=deps.id) }} {% endif %}">
+         <input type = "text" name = "name" {% if deps %} value="{{ deps.name }}" {% endif %} placeholder = "Name" /><br>
+         <input class="button"  type = "submit" value = "Submit" />
+      </form>
+   </div>
+{% endblock %}
