--- a/templates/employees.html
+++ b/templates/employees.html
@@ -1,66 +1,26 @@
-<!DOCTYPE html>
-<html lang = "en">
-<head>
-    <title>All employees</title>
-   <meta charset="UTF-8">
-   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='main.css') }}">
-   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='tables.css') }}">
-</head>
-   <body>
-      <header>
-         <div class="container">
-            <ul class="nav">
-                <li>
-                  <a href = "{{ url_for('view_employees.index') }}">Main Page</a>
-               </li>
-               <li>
-                  <a href = "{{ url_for('view_employees.show_all_emp') }}">Employees</a>
-               </li>
-               <li>
-                  <a href = "{{ url_for('crud_emp.new_emp') }}">Add Employee</a>
-               </li>
-               <li>
-                  <a href = "{{ url_for('view_departments.show_all_dep') }}">Departments</a>
-               </li>
-               <li>
-                  <a href = "{{ url_for('crud_dep.new_dep') }}">Add Department</a>
-               <li>
-            </ul>
-         </div>
-      </header>
-      <hr/>
-      <section class="main">
-         <div class="container">
-            <div class="main_part">
-            {%- for category, message in get_flashed_messages(with_categories = true) %}
-            <div class = "alert">
-               {{ message }}
-            </div>
-            {%- endfor %}
-            <table>
-               <thead>
-                  <tr>
-                     <th>Name</th>
-                     <th>Department</th>
-                     <th>Salary</th>
-                     <th>Date of Birth</th>
-                  </tr>
-               </thead>
-               <tbody>
-                  {% for employee in employees %}
-                     <tr>
-                        <td><a href="/employee/{{ employee.id }}">{{ employee.name }}</a></td>
-                        <td>{{ employee.department }}</td>
-                        <td>{{ employee.salary }}</td>
-                        <td>{{ employee.birth }}</td>
-                        <td><a href="/employee/{{ employee.id }}/edit">Edit</a></td>
-                        <td><a href="/employee/{{ employee.id }}/del">Delete</a></td>
-                     </tr>
-                  {% endfor %}
-               </tbody>
-            </table>
-            </div>
-         </div>
-      </section>
-   </body>
-</html>
+{% extends "base.html" %}
+{% block title %}All employees{% endblock %}
+{% block add %}
+   <table>
+      <thead>
+         <tr>
+            <th>Name</th>
+            <th>Department</th>
+            <th>Salary</th>
+            <th>Date of Birth</th>
+         </tr>
+      </thead>
+      <tbody>
+         {% for employee in employees %}
+            <tr>
+               <td><a href="/employee/{{ employee.id }}">{{ employee.name }}</a></td>
+               <td>{{ employee.department }}</td>
+               <td>{{ employee.salary }}</td>
+               <td>{{ employee.birth }}</td>
+               <td><a href="/employee/{{ employee.id }}/edit">Edit</a></td>
+               <td><a href="/employee/{{ employee.id }}/del">Delete</a></td>
+            </tr>
+         {% endfor %}
+      </tbody>
+   </table>
+{% endblock %}
